--- a/Caravan_Leveler_2/data/leveler.html
+++ b/Caravan_Leveler_2/data/leveler.html
@@ -10,9 +10,10 @@
     <script src="main.js"></script>
     <script src="level.js"></script>
 </head>
-<body OnLoad="window.setInterval(GetLevel, 500)">
+<body OnLoad="window.setInterval(GetLevel, 300)">
     <div class="card" id="card">
-        <h1 id="CustomName">Sport &amp; Fun &#9878;&#65039;</h1>
+        <h1 id="CustomName">Leveler &#9878;&#65039;</h1>
+        <button class="view-toggle" onclick="ToggleLevelMode()" aria-label="Switch to image leveler" title="Image Leveler">🖼️</button>
         <div id="noScriptWarning"><h2 style="color:red;">JavaScript is disabled!!!</h2></div>
         <div class="level-container">
             <div>
