--- a/Caravan_Leveler_2/data/data.html
+++ b/Caravan_Leveler_2/data/data.html
@@ -34,7 +34,7 @@
             <tbody id="dataTable"></tbody>
         </table>
     <p>
-        <span id="Output" class="outputSpan"></span>
+        <span id="Output"></span>
     </p>
     </div>
 </body>
