--- a/Caravan_Leveler_2/data/index.html
+++ b/Caravan_Leveler_2/data/index.html
@@ -18,7 +18,7 @@
          <span class="line"></span>
       </div>
       <div id="myLinks">
-         <button onclick="NavigateMenu('leveler.html')">Level</button><br>
+         <button onclick="NavigateMenu('auto_level.html')">Level</button><br>
          <button onclick="NavigateMenu('settings.html')">Settings</button><br>
          <button onclick="NavigateMenu('info.html')">ESP32 Info</button><br>
          <button onclick="NavigateMenu('data.html')">Gyroscope</button><br>
@@ -36,7 +36,7 @@
       </div>
    </div>
    <div class="iFrameDiv">
-      <iframe name="subframe" id="subframe" title="Sub" src="leveler.html"></iframe>
+   <iframe name="subframe" id="subframe" title="Sub" src="auto_level.html"></iframe>
       <div class="dimmer">
          <div class="centered">
             <div id="fileName"></div>
