--- a/Caravan_Leveler_2/data/info.html
+++ b/Caravan_Leveler_2/data/info.html
@@ -19,7 +19,7 @@
 		</div>
 		<p>
 			<button onClick="GetInfo()" id="SaveBtn">Refresh</button><br>
-			<span id="Output" class="outputSpan"></span>
+			<span id="Output"></span>
 		</p>
 	</div>
 </body>
