--- a/Caravan_Leveler_2/data/leveler.html
+++ b/Caravan_Leveler_2/data/leveler.html
@@ -28,7 +28,7 @@
                     <div class="bubble" id="bubbleX"></div>
                 </div>
             </div>
-            <span id="Output" class="outputSpan"></span>
+            <span id="Output"></span>
             <span id="Voltage" class="voltageSpan">⚡12.5V</span>
             <span id="Temperature" class="temperatureSpan">🌡22°C</span>
         </div>
