--- a/Caravan_Leveler_2/data/leveler_images.html
+++ b/Caravan_Leveler_2/data/leveler_images.html
@@ -32,10 +32,10 @@
                     <div class="angle-value" id="pitchValue">0.0°</div>                    
                 </div>
             </div>
-            <span id="Output" class="outputSpan"></span>
-            <span id="Voltage" class="voltageSpan">⚡12.5V</span>
-            <span id="Temperature" class="temperatureSpan">🌡22°C</span>
         </div>
+        <span id="Output"></span>
+        <span id="Voltage" class="voltageSpan">⚡12.5V</span>
+        <span id="Temperature" class="temperatureSpan">🌡22°C</span>
     </div>
 </body>
 </html>
