--- a/Caravan_Leveler_2/data/serial.html
+++ b/Caravan_Leveler_2/data/serial.html
@@ -27,7 +27,7 @@
 			<button onClick="toggleUpdates()" id="toggleBtn">Pause Updates</button>
 		</div>
 		<p>
-			<span id="Output" class="outputSpan"></span>
+			<span id="Output"></span>
 		</p>
 	</div>
 </body>
