--- a/Caravan_Leveler_2/data/settings.html
+++ b/Caravan_Leveler_2/data/settings.html
@@ -39,7 +39,7 @@
                 <button onClick="Restart()" id="RestartBtn" data-tooltip="Restart the ESP32 device.">Restart</button>
             </div>
         </div>
-        <span id="Output" class="brand-color" style="z-index:10;"></span>
+        <span id="Output"></span>
         <p>
             <div class="advanced-toggle" data-tooltip="Show advanced voltage calibration settings">
                 <label for="AdvancedMode">Advanced Settings:</label>
