--- a/Caravan_Leveler_2/data/voltage.html
+++ b/Caravan_Leveler_2/data/voltage.html
@@ -35,7 +35,7 @@
             <tbody id="voltageTable"></tbody>
         </table>
     <p>
-        <span id="Output" class="outputSpan"></span>
+        <span id="Output"></span>
     </p>
     </div>
 </body>
