Mobile Gyro demo
Enhanced the Demo-Mode to use the mobile device gyro, when no ESP32 available.

--- a/Caravan_Leveler_2/data/data.html
+++ b/Caravan_Leveler_2/data/data.html
@@ -14,6 +14,7 @@
 <body>
     <div class="card" id="card">
         <h1>Gyro Data &#x1F4C8;</h1>
+        <button id="gyroPermissionBtn" class="gyro-permission-btn" onclick="requestGyroManually()" style="display:none;" title="Enable Gyroscope">📱</button>
         <div id="noScriptWarning"><h2 style="color:red;">JavaScript is disabled!!!</h2></div>
         <div id="chart-container">
             <canvas id="sensorChart"></canvas>
