--- a/Caravan_Leveler_2/data/leveler_images.html
+++ b/Caravan_Leveler_2/data/leveler_images.html
@@ -8,12 +8,14 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="main.js"></script>
+    <script src="gyro_utils.js"></script>
     <script src="level_rotation.js"></script>
 </head>
 <body OnLoad="window.setInterval(GetLevelImage, 300)">
     <div class="card">
         <h1 id="CustomName">Leveler &#9878;&#65039;</h1>
         <button class="view-toggle" onclick="ToggleLevelMode()" aria-label="Switch to bubble leveler" title="Bubble Leveler">💧</button>
+        <button id="gyroPermissionBtn" class="gyro-permission-btn" onclick="requestGyroManually()" style="display:none;" title="Enable Gyroscope">📱</button>
         <div id="noScriptWarning"><h2 style="color:red;">JavaScript is disabled!!!</h2></div>
         <div class="rotation-container">
             <!-- Roll (Y axis / Side) -->
