--- a/Caravan_Leveler_2/data/index.html
+++ b/Caravan_Leveler_2/data/index.html
@@ -9,6 +9,7 @@
    <link rel="icon" href="favicon.ico" type="image/x-icon">
    <script src="main.js"></script>
    <script src="upload.js"></script>
+   <script src="../logger.js"></script>
 </head>
 <body>   
    <div id="BurgerMenu">
