--- a/Caravan_Leveler_2/data/leveler_images.html
+++ b/Caravan_Leveler_2/data/leveler_images.html
@@ -26,11 +26,11 @@
                     <div class="angle-value" id="rollValue">0.0°</div>                    
                 </div>
             </div>
-            <!-- Pitch (X axis / Front) -->
+            <!-- Pitch (X axis / Back) -->
             <div class="rotation-unit" id="pitchUnit">
                 <div class="scale-wrapper">
                     <div id="pitchScale" class="scale-svg"></div>
-                    <img id="pitchImage" src="Front.png" alt="Front" class="rot-image" draggable="false"/>
+                    <img id="pitchImage" src="Back.png" alt="Back" class="rot-image" draggable="false"/>
                     <div class="angle-value" id="pitchValue">0.0°</div>                    
                 </div>
             </div>
